<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipselabs</groupId>
	<artifactId>blueprints-emf</artifactId>
	<version>0.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>bundles/org.eclipselabs.blueprints.emf</module>
		<module>features/org.eclipselabs.blueprints.emf.feature</module>
		<module>tests/org.eclipselabs.blueprints.emf.junit</module>
		<module>tests/org.eclipselabs.blueprints.emf.neo4j.junit</module>
<!-- 		<module>tests/org.eclipselabs.blueprints.emf.orientdb.junit</module> -->
		<module>build/repository</module>
	</modules>

	<properties>
		<tycho-version>0.14.0</tycho-version>
		<targets>build/repository/target/</targets>
	</properties>

	<repositories>
		<repository>
			<id>indigo</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/juno</url>
		</repository>
		<repository>
			<id>p2</id>
			<layout>p2</layout>
			<url>http://ghillairet.github.com/p2</url>
		</repository>
		<repository>
			<id>orbit</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20120726065500/repository/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<pomDependencies>consider</pomDependencies>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>org.eclipselabs</groupId>
							<artifactId>blueprints-emf</artifactId>
							<version>0.2.0-SNAPSHOT</version>
							<classifier>build/target/blueprints-emf</classifier>
						</artifact>
					</target>
					<pomDependencies>consider</pomDependencies>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<argLine>-server -Xmx512M -XX:+UseConcMarkSweepGC</argLine>
					<includes>
						<include>**/junit/suite/TestSuite.java</include>
					</includes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>

</project>
